Exemple ajout d'image

--- a/doc/renduIntermediaire.tex
+++ b/doc/renduIntermediaire.tex
@@ -32,6 +32,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \section{Schéma entités-associations}
 {
+    \begin{figure}[ht!]
+        \includegraphics[width=\textwidth]{chemin_de_limage}
+        \centering
+        \caption{Légende}
+    \end{figure}
+
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
