mise en forme du tex

--- a/doc/renduIntermediaire.tex
+++ b/doc/renduIntermediaire.tex
@@ -41,7 +41,11 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\section{Schémas d'architecture du logiciel}
+\section{Contraintes de valeurs}
+{
+	
+}
+\section{Contraintes d'intégrités}
 {
 }
 
